--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
 	],
 	"activationEvents": [
 		"onCommand:mipsino.ToHex",
-		"onCommand:mipsino.ToAsm"
+		"onCommand:mipsino.ToAsm",
+		"onDebug",
+		"onDebugDynamicConfigurations:mock",
+		"onCommand:extension.mock-debug.getProgramName"
 	],
 	"main": "./out/extension.js",
 	"contributes": {
@@ -63,6 +66,63 @@
 				"language": "mips",
 				"path": "./src/snippets.json"
 			}
+		],
+		"debuggers": [
+			{
+				"type": "mock",
+				"label": "MIPSino Simulator",
+				"program": "./out/debugAdapter.js",
+				"runtime": "node",
+				"configurationAttributes": {
+					"launch": {
+						"required": [
+							"program"
+						],
+						"properties": {
+							"program": {
+								"type": "string",
+								"description": "Absolute path to a text file.",
+								"default": "${workspaceFolder}/${command:AskForProgramName}"
+							},
+							"stopOnEntry": {
+								"type": "boolean",
+								"description": "Automatically stop after launch.",
+								"default": true
+							},
+							"trace": {
+								"type": "boolean",
+								"description": "Enable logging of the Debug Adapter Protocol.",
+								"default": true
+							}
+						}
+					}
+				},
+				"initialConfigurations": [
+					{
+						"type": "mock",
+						"request": "launch",
+						"name": "Ask for file name",
+						"program": "${workspaceFolder}/${command:AskForProgramName}",
+						"stopOnEntry": true
+					}
+				],
+				"configurationSnippets": [
+					{
+						"label": "Mock Debug: Launch",
+						"description": "A new configuration for 'debugging' a user selected markdown file.",
+						"body": {
+							"type": "mock",
+							"request": "launch",
+							"name": "Ask for file name",
+							"program": "^\"\\${workspaceFolder}/\\${command:AskForProgramName}\"",
+							"stopOnEntry": true
+						}
+					}
+				],
+				"variables": {
+					"AskForProgramName": "extension.mock-debug.getProgramName"
+				}
+			}
 		]
 	},
 	"scripts": {
@@ -84,6 +144,9 @@
 		"glob": "^7.1.6",
 		"mocha": "^7.1.1",
 		"typescript": "^3.8.3",
-		"vscode-test": "^1.3.0"
+		"vscode-test": "^1.3.0",
+		"vscode-debugadapter-testsupport": "1.40.3",
+		"vscode-debugadapter": "1.40.0",
+		"await-notify": "1.0.1"
 	}
 }
