--- a/package.json
+++ b/package.json
@@ -1,153 +1,84 @@
 {
-	"name": "mipsino",
-	"displayName": "MIPSino",
-	"description": "A built-in MIPS assmbler for VScode.",
-	"version": "0.0.1",
-	"publisher": "ZiYue",
-	"homepage": "https://github.com/PAN-Ziyue/MIPSino",
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/PAN-Ziyue/MIPSino"
-	},
-	"bugs": {
-		"url": "https://github.com/PAN-Ziyue/MIPSino/issues",
-		"email": "ziyuepan99@outlook.com"
-	},
-	"engines": {
-		"vscode": "^1.44.0"
-	},
-	"categories": [
-		"Languages",
-		"Snippets"
-	],
-	"activationEvents": [
-		"onCommand:mipsino.ToHex",
-		"onCommand:mipsino.ToAsm",
-		"onDebug",
-		"onDebugDynamicConfigurations:mock",
-		"onCommand:extension.mock-debug.getProgramName"
-	],
-	"main": "./out/extension.js",
-	"contributes": {
-		"commands": [
-			{
-				"command": "mipsino.ToHex",
-				"title": "MIPSino: Assemble"
-			},
-			{
-				"command": "mipsino.ToAsm",
-				"title": "MIPSino: Disassemble"
-			}
-		],
-		"languages": [
-			{
-				"id": "mips",
-				"aliases": [
-					"MIPS Assembly",
-					"mips"
-				],
-				"extensions": [
-					".s",
-					".mips",
-					".asm"
-				],
-				"configuration": "./src/language-configuration.json"
-			}
-		],
-		"grammars": [
-			{
-				"language": "mips",
-				"scopeName": "source.mips",
-				"path": "./src/mips.tmLanguage"
-			}
-		],
-		"snippets": [
-			{
-				"language": "mips",
-				"path": "./src/snippets.json"
-			}
-		],
-		"debuggers": [
-			{
-				"type": "mock",
-				"label": "MIPSino Simulator",
-				"program": "./out/debugAdapter.js",
-				"runtime": "node",
-				"configurationAttributes": {
-					"launch": {
-						"required": [
-							"program"
-						],
-						"properties": {
-							"program": {
-								"type": "string",
-								"description": "Absolute path to a text file.",
-								"default": "${workspaceFolder}/${command:AskForProgramName}"
-							},
-							"stopOnEntry": {
-								"type": "boolean",
-								"description": "Automatically stop after launch.",
-								"default": true
-							},
-							"trace": {
-								"type": "boolean",
-								"description": "Enable logging of the Debug Adapter Protocol.",
-								"default": true
-							}
-						}
-					}
-				},
-				"initialConfigurations": [
-					{
-						"type": "mock",
-						"request": "launch",
-						"name": "Ask for file name",
-						"program": "${workspaceFolder}/${command:AskForProgramName}",
-						"stopOnEntry": true
-					}
-				],
-				"configurationSnippets": [
-					{
-						"label": "Mock Debug: Launch",
-						"description": "A new configuration for 'debugging' a user selected markdown file.",
-						"body": {
-							"type": "mock",
-							"request": "launch",
-							"name": "Ask for file name",
-							"program": "^\"\\${workspaceFolder}/\\${command:AskForProgramName}\"",
-							"stopOnEntry": true
-						}
-					}
-				],
-				"variables": {
-					"AskForProgramName": "extension.mock-debug.getProgramName"
-				}
-			}
-		]
-	},
-	"scripts": {
-		"vscode:prepublish": "npm run compile",
-		"compile": "tsc -p ./",
-		"lint": "eslint src --ext ts",
-		"watch": "tsc -watch -p ./",
-		"pretest": "npm run compile && npm run lint",
-		"test": "node ./out/test/runTest.js"
-	},
-	"devDependencies": {
-		"@types/vscode": "^1.44.0",
-		"@types/glob": "^7.1.1",
-		"@types/mocha": "^7.0.2",
-		"@types/node": "^13.11.0",
-		"eslint": "^6.8.0",
-		"@typescript-eslint/parser": "^2.26.0",
-		"@typescript-eslint/eslint-plugin": "^2.26.0",
-		"glob": "^7.1.6",
-		"mocha": "^7.1.1",
-		"typescript": "^3.8.3",
-		"vscode-test": "^1.3.0",
-		"vscode-debugadapter-testsupport": "1.40.3",
-		"vscode-debugadapter": "1.40.0",
-		"vscode-debugprotocol": "1.40.0",
-		"await-notify": "1.0.1"
-	}
+  "name": "mipsino",
+  "displayName": "MIPSino",
+  "description": "",
+  "version": "0.0.1",
+  "engines": {
+    "vscode": "^1.45.0"
+  },
+  "categories": [
+    "Programming Languages",
+    "Snippets"
+  ],
+  "activationEvents": [
+    "onCommand:mipsino.ToHex",
+    "onCommand:mipsino.ToAsm"
+  ],
+  "main": "./out/extension.js",
+  "contributes": {
+    "commands": [
+      {
+        "command": "mipsino.ToHex",
+        "title": "MIPSino: Assemble"
+      },
+      {
+        "command": "mipsino.ToAsm",
+        "title": "MIPSino: Disassemble"
+      }
+    ],
+    "languages": [
+      {
+        "id": "mips",
+        "aliases": [
+          "MIPS Assembly",
+          "mips"
+        ],
+        "extensions": [
+          ".s",
+          ".mips",
+          ".asm"
+        ],
+        "configuration": "./src/language-configuration.json"
+      }
+    ],
+    "grammars": [
+      {
+        "language": "mips",
+        "scopeName": "source.mips",
+        "path": "./src/mips.tmLanguage"
+      }
+    ],
+    "snippets": [
+      {
+        "language": "mips",
+        "path": "./src/snippets.json"
+      }
+    ]
+  },
+  "scripts": {
+    "vscode:prepublish": "npm run compile",
+    "compile": "tsc -p ./",
+    "lint": "eslint src --ext ts",
+    "watch": "tsc -watch -p ./",
+    "pretest": "npm run compile && npm run lint",
+    "test": "node ./out/test/runTest.js",
+    "antlr4ts": "antlr4ts -o src/grammar src/grammar/mips.g4"
+  },
+  "devDependencies": {
+    "@types/vscode": "^1.45.0",
+    "@types/glob": "^7.1.1",
+    "@types/mocha": "^7.0.2",
+    "@types/node": "^13.11.0",
+    "eslint": "^6.8.0",
+    "@typescript-eslint/parser": "^2.26.0",
+    "@typescript-eslint/eslint-plugin": "^2.26.0",
+    "glob": "^7.1.6",
+    "mocha": "^7.1.1",
+    "typescript": "^3.8.3",
+    "vscode-test": "^1.3.0"
+  },
+  "dependencies": {
+    "antlr4ts": "^0.5.0-alpha.3",
+    "antlr4ts-cli": "^0.5.0-alpha.3"
+  }
 }
